# OctoFlow

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  requirements.txt
docs/scripts/: gen_ref_nav.py
docs/snippets/: links.txt
examples/: example_artifact_handler_dict.py  example_artifact_handler_pandas.py  example_client.py  example_config.py  example_copy.py  example_dataclass.py  example_dataset.py  example_dataset_loader.py  example_dataset_map.py  example_document.py  example_experiment.py  example_hash.py  example_hash_2.py  example_log_artifacts_pandas.py  example_project.py  example_run.py  example_run_logging.py  example_run_match.py  example_sqlitedict.py  example_validate_schema.py  example_validator.py  sample_example.py  test_escape.py  test_rsync.py  users.jsonl
examples/example_project/: .gitignore
examples/example_project/src/: __init__.py  project.py
notebooks/: example.db  example_pipeline.ipynb  example_tracking.ipynb  plotting.ipynb  template.ipynb
src/octoflow/: __init__.py  _config.py  config.py  constants.py  core.py  exceptions.py  logging.py  plugin.py  typing.py
src/octoflow/core/: __init__.py  base.py  client.py  experiment.py  meta.py  package.py  run.py  value.py  variable.py
src/octoflow/core/artifact/: __init__.py  handler.py
src/octoflow/data/: __init__.py  base.py  compute.py  constants.py  dataclass.py  dataset.py  document.py  expression.py  field.py  loader.py  loaders.py  metadata.py  sampler.py  schema.py  types.py  utils.py
src/octoflow/model/: __init__.py  artifact.py  base.py  client.py  experiment.py  namespace.py  run.py  value.py  value_utils.py  variable.py
src/octoflow/pipeline/: __init__.py  pipeline.py  task.py
src/octoflow/pipeline/task/: __init__.py  manager.py  task.py
src/octoflow/plugins/: __init__.py  package.py
src/octoflow/plugins/artifacts/: __init__.py  json_.py  pandas_.py  pickle_.py  safetensors_.py  transformers_.py
src/octoflow/plugins/tracking/: __init__.py
src/octoflow/plugins/tracking/artifacts/: __init__.py
src/octoflow/project/: __init__.py  base.py  project.py
src/octoflow/tracking/: __init__.py  base.py  client.py  experiment.py  models.py  run.py  sqlalchemy_store.py  store.py  utils.py  value.py  value_utils.py  variable.py
src/octoflow/tracking/artifact/: __init__.py  handler.py
src/octoflow/tracking_db/: __init__.py  client.py  experiment.py  run.py  value.py  variable.py
src/octoflow/tracking_db/artifact/: __init__.py
src/octoflow/tracking_fs/: __init__.py  base.py  client.py  experiment.py  run.py  store.py  value.py
src/octoflow/tracking_fs/artifact/: handler.py
src/octoflow/utils/: __init__.py  cache.py  cacheutils.py  collections.py  config.py  dataclasses.py  escape.py  func.py  functions.py  hash.py  hashing.py  hashutils.py  html.py  model.py  mutation.py  notebbok.py  objects.py  progbar.py  resources.py  rsync.py  schema.py  sqlitedict.py  string.py  validate.py
tests/: __init__.py  conftest.py  create_experiment_test.py  dataset_test.py  log_test.py  mutabledict_test.py  mutablelist_test.py  plugins_artifacts_safetensors_test.py  variable_type_test.py
tests/octoflow_unit_test/model/: test_client.py  test_experiment.py  test_namespace.py  test_run.py  utils.py
